[tool.poetry]
name = "202307"
version = "0.1.0"
description = ""
authors = ["Satoshi SUZUKI <studio3104.com@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
